--- a/src/css/index.css
+++ b/src/css/index.css
@@ -135,6 +135,7 @@
     flex: 1;
     background-color: transparent;
     height: 100%;
+    width: 100%;
     margin: 0px;
     font-size: medium;
     border: none;
