--- a/src/css/main.css
+++ b/src/css/main.css
@@ -297,7 +297,6 @@ body {
 #nav-bar {
     display: flex;
     justify-content: center;
-    align-content: stretch;
     width: 100%;
     height: var(--nav-bar-height);
     position: fixed;
@@ -316,7 +315,7 @@ body {
     align-items: center;
     height: 3.2em;
     max-width: 10em;
-    flex-grow: 1;
+    flex: 1;
     cursor: pointer;
     padding: var(--nav-bar-button-padding);
 }
